<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.project.dronedemo.view.enternumber.PhoneNumberViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue"
        tools:context=".view.enternumber.PhoneNumberActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="@dimen/_8sdp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImgBackBtn"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:padding="@dimen/_5sdp"
            app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/ImgBackBtn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="@dimen/_5sdp"
            android:text="@string/fill_the_form"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cdlPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/backgroung_border"
            android:padding="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/guideLineNumber">

            <TextView
                android:id="@+id/txtCountryCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_code"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                style="@style/AppEditText"
                android:layout_width="0dp"
                android:id="@+id/edtNumberPhome"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:background="@null"
                android:hint="@string/enter_mobile_number"
                android:inputType="number"
                android:maxLength="10"
                  android:text="@={viewModel.phoneNumber}"
                 app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtCountryCode"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cdlNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:onClick="@{() ->viewModel.onNextClick()}"
            android:src="@drawable/next_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cdlPhoneNumber">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgNext"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:src="@drawable/next_page"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgNext" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLineNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>