<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.project.dronedemo.view.otpverification.OtpVerificationViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_8sdp"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="@dimen/_8sdp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ImgBackBtn"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:text="@string/verification"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/ImgBackBtn" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="@dimen/_5sdp"
            android:text="@string/we_send_sms"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtOnNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="@dimen/_1sdp"
            android:text="@string/on_number"
            android:textColor="@color/light_gray"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/txtNote" />

        <in.aabhasjindal.otptextview.OtpTextView
            android:id="@+id/txtOtpView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/black"
            app:bar_enabled="false"
            app:bar_height="1dp"
            app:height="40dp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/txtOnNumber"
            app:length="6"
            app:otp=""
            app:otp_box_background="@drawable/backgroung_border"
            app:otp_text_size="@dimen/_13sdp"
            app:width="40dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtCodeNotReceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="@dimen/_1sdp"
            android:text="@string/code_not_send"
            android:textColor="@color/purple_500"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/guidelineRight"
            app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@+id/txtOtpView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>