<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_blue">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/v"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cdProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.cardview.widget.CardView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:elevation="12dp"
                    app:cardCornerRadius="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/imgProfile"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_manage_accounts_24" />

                </androidx.cardview.widget.CardView>

                <ImageView
                    android:id="@+id/imgProfileEdit"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_baseline_manage_accounts_24"
                    app:layout_constraintBottom_toBottomOf="@+id/guideline3"
                    app:layout_constraintEnd_toEndOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="10dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideStart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="12dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideEnd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_end="12dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/guideEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toBottomOf="@+id/cdProfile">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgProfileHint"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_manage_accounts_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgProfileHint"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         android:textSize="@dimen/_13sdp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
                app:layout_constraintEnd_toEndOf="@+id/guideEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgMobileHint"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_send_to_mobile_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldMob"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/mobile_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgMobileHint"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         android:textSize="@dimen/_13sdp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout4"
                app:layout_constraintEnd_toEndOf="@+id/guideEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgTypeHint"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_merge_type_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldType"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/type"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgTypeHint"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                         android:textSize="@dimen/_13sdp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout5"
                app:layout_constraintEnd_toEndOf="@+id/guideEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgLocationHint"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_add_location_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldLoc"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgLocationHint"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="@+id/guideEnd"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@id/guideStart"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgPinHint"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_baseline_manage_accounts_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextFieldPin"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/pincode"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imgPinHint"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         android:maxLength="6"
                        android:textSize="@dimen/_13sdp"
                        tools:ignore="TouchTargetSizeCheck" />

                </com.google.android.material.textfield.TextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:background="@color/purple_500"
            android:text="@string/submit"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>